# ants-simulation

./: .gitignore  Cargo.toml  README.md
benches/: simulation.rs
src/: colony.rs  lib.rs  main.rs  parser.rs  simulation.rs
task/: description.txt
