[package]
name = "ants"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Dyachkov"]
description = "Ant Mania - A simulation of space ant invasion"

[dependencies]
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
criterion = "0.5"

[[bench]]
name = "simulation"
harness = false
